// ============================================================================
// /supplychain/demand-forecasting-service (版本 2.0)
// 描述: 提供需求预测功能，基于历史消耗数据生成未来的需求计划。
//       字段设计参考核心ERP的计划独立需求表 (PBED, PBIM)。
// ============================================================================

syntax = "proto3";

package enterprise.supplychain.forecasting;

option java_package = "com.enterprise.supplychain.forecasting.v2";
option java_multiple_files = true;
option go_package = "github.com/enterprise-extensions/supplychain/forecasting/v2;forecasting";

import "google/protobuf/timestamp.proto";
import "common/common.proto";

// ============================================================================
// 服务定义: DemandForecastingService
// ============================================================================

service DemandForecastingService {
  // 生成需求预测 - 异步
  rpc GenerateForecast(GenerateForecastRequest) returns (enterprise.common.JobInfo);

  // 获取已生成的预测计划
  rpc GetForecast(GetForecastRequest) returns (ForecastPlan);
  
  // 更新预测计划 (New)
  rpc UpdateForecastPlan(UpdateForecastPlanRequest) returns (ForecastPlanResponse);

  // 比较预测版本 (New)
  rpc CompareForecastVersions(CompareForecastVersionsRequest) returns (ForecastComparisonResponse);

  // 将预测计划传输到核心ERP作为计划独立需求
  rpc TransferForecastToERP(TransferForecastRequest) returns (TransferForecastResponse);
}

// ============================================================================
// 数据结构: Forecast (预测)
// ============================================================================

// 预测计划
message ForecastPlan {
  // 计划ID
  string plan_id = 1;
  // 物料编号
  string material = 2;
  // 工厂
  string plant = 3;
  // 预测版本
  string forecast_version = 4;
  // 预测周期
  repeated ForecastPeriod periods = 5;
  // 使用的模型
  enterprise.common.ForecastModel model_used = 6;
  // 创建时间
  google.protobuf.Timestamp created_at = 7;
}

// 预测周期
message ForecastPeriod {
  // 周期开始日期
  google.protobuf.Timestamp start_date = 1;
  // 周期结束日期
  google.protobuf.Timestamp end_date = 2;
  // 预测数量
  enterprise.common.QuantityValue forecasted_quantity = 3;
  // 置信区间下限
  enterprise.common.QuantityValue confidence_lower_bound = 4;
  // 置信区间上限
  enterprise.common.QuantityValue confidence_upper_bound = 5;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 生成预测请求
message GenerateForecastRequest {
  // 物料编号
  string material = 1;
  // 工厂
  string plant = 2;
  // 历史数据期间
  enterprise.common.DateRange historical_period = 3;
  // 预测期间
  enterprise.common.DateRange forecast_period = 4;
  // 预测模型
  enterprise.common.ForecastModel forecast_model = 5;
  enterprise.common.RequestContext context = 99;
}

// 获取预测请求
message GetForecastRequest {
  // 计划ID
  string plan_id = 1;
  enterprise.common.RequestContext context = 99;
}

message UpdateForecastPlanRequest {
  string plan_id = 1;
  repeated ForecastPeriod modified_periods = 2;
  string reason_code = 3;
  enterprise.common.RequestContext context = 99;
}

message ForecastPlanResponse {
  bool success = 1;
  string plan_id = 2;
  repeated enterprise.common.ApiMessage messages = 3;
}

message CompareForecastVersionsRequest {
  string plan_id_base = 1;
  string plan_id_compare = 2;
  enterprise.common.RequestContext context = 99;
}

message ForecastComparisonResponse {
  string material = 1;
  string plant = 2;
  repeated PeriodDifference differences = 3;
}

message PeriodDifference {
  enterprise.common.DateRange period = 1;
  enterprise.common.QuantityValue quantity_base = 2;
  enterprise.common.QuantityValue quantity_compare = 3;
  enterprise.common.QuantityValue variance = 4;
  double variance_percentage = 5;
}

// 传输预测请求
message TransferForecastRequest {
  // 计划ID
  string plan_id = 1;
  // 独立需求计划版本
  string requirement_plan_version = 2;
  // 是否激活需求
  bool activate_requirements = 3;
  enterprise.common.RequestContext context = 99;
}

// 传输预测响应
message TransferForecastResponse {
  // 操作是否成功
  bool success = 1;
  // 从核心ERP返回的消息列表
  repeated enterprise.common.ApiMessage messages = 2;
}
